; ModuleID = '/home/carl/AnghaBench/beanstalkd/ct/extr_ct.c_ctstoptimer.c'
source_filename = "/home/carl/AnghaBench/beanstalkd/ct/extr_ct.c_ctstoptimer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@btiming = common dso_local global i64 0, align 8
@bstart = common dso_local global i64 0, align 8
@bdur = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ctstoptimer() #0 {
  %1 = load i64, i64* @btiming, align 8
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %11

3:                                                ; preds = %0
  %4 = call i64 (...) @nstime()
  %5 = load i64, i64* @bstart, align 8
  %6 = sub nsw i64 %4, %5
  %7 = load i32, i32* @bdur, align 4
  %8 = sext i32 %7 to i64
  %9 = add nsw i64 %8, %6
  %10 = trunc i64 %9 to i32
  store i32 %10, i32* @bdur, align 4
  store i64 0, i64* @btiming, align 8
  br label %11

11:                                               ; preds = %3, %0
  ret void
}

declare dso_local i64 @nstime(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
